; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_wsocket.c_socket_hoststrerror.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_wsocket.c_socket_hoststrerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"host not found\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @socket_hoststrerror(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp sle i32 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = call i8* @io_strerror(i32 %7)
  store i8* %8, i8** %2, align 8
  br label %15

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  switch i32 %10, label %12 [
    i32 128, label %11
  ]

11:                                               ; preds = %9
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %15

12:                                               ; preds = %9
  %13 = load i32, i32* %3, align 4
  %14 = call i8* @wstrerror(i32 %13)
  store i8* %14, i8** %2, align 8
  br label %15

15:                                               ; preds = %12, %11, %6
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}

declare dso_local i8* @io_strerror(i32) #1

declare dso_local i8* @wstrerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
